# netcord

./: .flake8  .gitignore  .readthedocs.yaml  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  flake8-linting.yml  publish.yml  python-publish.yml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/guides/: installation.md  usage.md
docs/netcord/: models.rst  netcord.rst
docs/reference/: cache.md  depends.md  errors.md  models.md  netcord.md  utils.md
guides/installation/: index.html
guides/usage/: index.html
netcord/: __init__.py  _http.py  auth.py  cache.py  config.py  depends.py  enums.py  errors.py  exceptions.py  http.py  jwt.py  logger.py  models.py  netcord.py  singletons.py  utils.py
reference/cache/: index.html
reference/depends/: index.html
reference/errors/: index.html
reference/models/: index.html
reference/netcord/: index.html
reference/utils/: index.html
search/: search_index.json
