[project]
name = "netcord"
description = "Package for authentication with Discord API"
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = ["netcord", "discord", "oauth2"]
authors = [
    { name = "netrix-team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
version = {attr = "netcord.__version__"}
dependencies = {file = "requirements.txt"}

[project.urls]
Homepage = "https://github.com/netrix-team/netcord"
GitHub = "https://github.com/netrix-team/netcord"
Docs = "https://netcord.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
